Stop a runaway generation at the broker
One request to gemma-4 produced 143,896 characters of the same sentence and
held a GPU for thirty minutes; the same happened on Qwen3.8 from another
client. A reply ends when the model stops or max_tokens is reached, and no
client was sending max_tokens — gemma-4 carries a context length of 131,072,
so nothing ended it. Fixing one client leaves the others, and this is the
only point all of them pass through.

- broker.generation-limits, keyed by queue: max_tokens (a ceiling, not a
  target), plus repetition_penalty and frequency_penalty knobs left unset.
- LimitedRequestBody fills them in; a body that is not JSON is forwarded
  verbatim, so the OCR and embedding paths are untouched.
- RepetitionStoppingResponseSink closes the upstream response once the last
  8 KB of generated text is made of only a few distinct 64-byte pieces. It
  judges the generated content, not the bytes on the wire: SSE repeats its
  own framing on every token.
- ResponseSink.stopRequested, honoured by HttpAiServiceClient.relay.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>